<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.16</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.algaworks</groupId>
	<artifactId>algafood-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>algafood-api</name>
	<description>API de delivery de comida</description>
	<properties>
		<java.version>17</java.version>
		<modelmapper.version>3.1.0</modelmapper.version>
		<squiggly.version>1.3.18</squiggly.version>
		<jasperreports.version>7.0.0</jasperreports.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
	    	<groupId>org.springframework.boot</groupId>
	    	<artifactId>spring-boot-starter-data-jpa</artifactId>
	    </dependency>
	    <dependency>
	    	<groupId>com.mysql</groupId>
	    	<artifactId>mysql-connector-j</artifactId>
	    	<scope>runtime</scope>
	    </dependency>
	    <dependency>
    		<groupId>org.projectlombok</groupId>
    		<artifactId>lombok</artifactId>
    	</dependency>
    	<dependency>
    		<groupId>org.flywaydb</groupId>
    		<artifactId>flyway-core</artifactId>
    	</dependency>
    	<dependency>
  			<groupId>org.flywaydb</groupId>
  			<artifactId>flyway-mysql</artifactId>
		</dependency>
		<dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-lang3</artifactId>
    	</dependency>
    	<!-- A partir da versao 2.3.0 é necessaria para usar Bean Validations -->
    	<dependency> 
    		<groupId>org.springframework.boot</groupId> 
    		<artifactId>spring-boot-starter-validation</artifactId> 
		</dependency>
		<!-- Dependência do Rest Assured para testes de API -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Dependência para biblioteca de mapeamento de objetos (domain model/representaion model) -->
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>${modelmapper.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>com.github.bohnman</groupId>
		    <artifactId>squiggly-filter-jackson</artifactId>
		    <version>${squiggly.version}</version>
		</dependency>
		
		<dependency>
    		<groupId>net.sf.jasperreports</groupId>
    		<artifactId>jasperreports</artifactId>
    		<version>${jasperreports.version}</version>
		</dependency>
		
		<dependency>
    		<groupId>net.sf.jasperreports</groupId>
    		<artifactId>jasperreports-pdf</artifactId>
    		<version>${jasperreports.version}</version>
		</dependency>
		
		<dependency>
    		<groupId>net.sf.jasperreports</groupId>
    		<artifactId>jasperreports-functions</artifactId>
    		<version>${jasperreports.version}</version>
		</dependency>
		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			
			<!-- Plugin failsafe para que testes de integração não sejam executados
			a cada build, mas sim quando chamar ./mvnw verify -->
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
